fix overflow

--- a/css/common.css
+++ b/css/common.css
@@ -38,7 +38,7 @@ body {
     position: absolute;
     font-family: sans-serif;
     border: none 0px;
-    overflow: auto;
+    overflow: hidden;
     width: 100%;
     max-width: 100%;
     min-width: 750px;
